@@ -14,6 +14,7 @@ AC_PROG_LN_S
 AC_PROG_LIBTOOL
 AC_PROG_MAKE_SET
 
+
 dnl Check for librapi2
 PKG_CHECK_MODULES(LIBRAPI2, librapi2 >= 0.9.1)
 
@@ -26,6 +27,9 @@ PKG_CHECK_MODULES(GNOME2,
 				  libglade-2.0)
 AC_SUBST(GNOME2_CFLAGS)
 AC_SUBST(GNOME2_LIBS)
+
+AC_PATH_PROG(GCONFTOOL, gconftool-2)
+AM_GCONF_SOURCE_2
 
 dnl Check for D-Bus
 PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.61, dbus-glib-1 >= 0.61],
